--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Web site created using create-react-app" />
     <link rel="apple-touch-icon" href="https://img.icons8.com/color/48/000000/shopify.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>miniCommerce</title>
+    <title>BIDOCS</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
